YAS-CA/objects/Rule_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <label>Example</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Info_URL__c</fullName>
        <label>External Info URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <label>Rule Set</label>
        <referenceTo>Rule_Set_Setting__mdt</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Rule</label>
    <pluralLabel>Rules</pluralLabel>
</CustomObject>